--- a/style.css
+++ b/style.css
@@ -1,1 +1,30 @@
+.content {
+  font-family: Arial, sans-serif;
+  margin: 30px;
+}
 
+.list {
+  margin-left: 40px;
+}
+.center {
+  text-align: center;
+  margin: 30px;
+}
+.left {
+  text-align: left;
+  margin: 30px;
+}
+
+.text_1 {
+  font-size: 22px;
+}
+.text_2 {
+  font-size: 16px;
+}
+p {
+  text-indent: 20px;
+}
+
+.formula {
+  display: inline-block;
+}
