--- a/style.css
+++ b/style.css
@@ -36,3 +36,12 @@ p {
 .formula {
   display: inline-block;
 }
+
+table {
+  border: 1px solid black; /* задает границу таблицы */
+  border-collapse: collapse; /* объединяет границы ячеек */
+}
+th, td {
+  border: 1px solid black; /* задает границу для ячеек */
+  padding: 5px; /* задает отступ внутри ячеек */
+}
