--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@ p {
   display: inline-block;
 }
 
-table {
+.table {
   border: 2px solid black; /* задает границу таблицы */
   border-collapse: collapse; /* объединяет границы ячеек */
 }
-th, td {
+.th, td {
   border: 2px solid black; /* задает границу для ячеек */
   padding: 5px; /* задает отступ внутри ячеек */
 }
