--- a/style.css
+++ b/style.css
@@ -45,4 +45,5 @@ p {
 .my-table th, .my-table td {
   border: 2px solid black; /* задает границу для ячеек */
   padding: 5px; /* задает отступ внутри ячеек */
+  font-weight: normal;
 }
