--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
   margin: 30px;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+}
+
 .list {
   margin-left: 40px;
 }
